--- a/src/Hph/View/back/place.html.twig
+++ b/src/Hph/View/back/place.html.twig
@@ -2,25 +2,7 @@
 {% block title %}Lieux{% endblock %}
 {% block content %}
     <div class="container">
-        {% if error==2 %}
-            <div class="alert alert-danger" role="alert">Le nom ou le lien d'un lieu doit être une chaîne de caractères</div>
-        {% elseif error==3 %}
-            <div class="alert alert-danger" role="alert">La taille du nom d'un lieu ne peut pas dépasser 30 caractères</div>
-        {% elseif error==0 %}
-            <div class="alert alert-danger" role="alert">Une erreur s'est produite lors de l'insertion dans la base de données</div>
-        {% elseif error==4 %}
-            <div class="alert alert-danger" role="alert">L'extension n'est pas valide</div>
-        {% elseif error==5 %}
-            <div class="alert alert-danger" role="alert">La taille de l'image est trop élevé</div>
-        {% elseif error==6 %}
-            <div class="alert alert-danger" role="alert">Le poids de l'image est trop élevé</div>
-        {% elseif error==0 %}
-            <div class="alert alert-danger" role="alert">Une erreur s'est produite lors de l'insertion dans la base de données</div>
-        {% elseif error==7 %}
-            <div class="alert alert-danger" role="alert">Le format de la date est incorrect</div>
-        {% elseif error==8 %}
-            <div class="alert alert-danger" role="alert">Le format du lien du lieu est invalide</div>
-        {% endif %}
+        {% include 'error.html.twig' %}
         <div class="text-center">
             <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#form" aria-expanded="false">Ajouter un lieu</button>
         </div>
@@ -29,25 +11,26 @@
             <div class="well">
                 <h2 class="text-center">Ajouter un lieu</h2>
                 <hr/>
+                {% include 'formInfo.html.twig' %}
                 <form method="POST" action="../../../../admin/admin.php?page=addPlace" enctype="multipart/form-data">
                     <div class="form-group">
-                        <label for="name">Nom du lieux</label>
+                        <label for="name">Nom du lieux <span class="red">*</span></label>
                         <input type="text" class="form-control" id="name" name="name" placeholder="Entrez le nom du lieu" required>
                     </div>
                     <div class="form-group">
-                        <label for="url">Lien du lieux</label>
+                        <label for="url">Lien du lieux <span class="red">*</span></label>
                         <input type="text" class="form-control" id="url" name="url" placeholder="Entrez le lien du lieu (le lien doit débuter par http://)" required>
                     </div>
                     <div class="form-group">
-                        <label for="start">Heure d'ouverture du lieu</label>
+                        <label for="start">Heure d'ouverture du lieu <span class="red">*</span></label>
                         <input type="text" class="form-control" placeholder="Format : YYYY-MM-DD HH:MM:SS" id="start" name="start" required>
                     </div>
                     <div class="form-group">
-                        <label for="start">Heure de fermeture du lieu</label>
+                        <label for="start">Heure de fermeture du lieu <span class="red">*</span></label>
                         <input type="text" class="form-control" placeholder="Format : YYYY-MM-DD HH:MM:SS" id="end" name="end" required>
                     </div>
                     <div class="form-group">
-                        <label for="img">Photo du lieu</label>
+                        <label for="img">Photo du lieu <span class="red">*</span></label>
                         <input type="file" id="img" name="img" required>
                         {% include 'imgInfo.html.twig' %}
                     </div>
@@ -106,26 +89,27 @@
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                                 <h4 class="modal-title">Modifier un lieux</h4>
                             </div>
+                            {% include 'formInfo.html.twig' %}
                             <form method="POST" action="../../../../admin/admin.php?page=updatePlace" enctype="multipart/form-data">
                                 <div class="modal-body">
                                     <div class="form-group">
-                                        <label for="name">Nom du lieux</label>
+                                        <label for="name">Nom du lieux <span class="red">*</span></label>
                                         <input type="text" class="form-control" id="name" name="name" placeholder="Entrez le nom du lieu" value="{{ place.name }}" required>
                                     </div>
                                     <div class="form-group">
-                                        <label for="url">Lien du lieux</label>
+                                        <label for="url">Lien du lieux <span class="red">*</span></label>
                                         <input type="text" class="form-control" id="url" name="url" placeholder="Entrez le lien du lieu (le lien doit débuter par http://)" value="{{ place.url }}" required>
                                     </div>
                                     <div class="form-group">
-                                        <label for="start">Heure d'ouverture du lieu</label>
+                                        <label for="start">Heure d'ouverture du lieu <span class="red">*</span></label>
                                         <input type="text" class="form-control" placeholder="Format : YYYY-MM-DD HH:MM:SS" id="start" name="start" value="{{ place.start }}" required>
                                     </div>
                                     <div class="form-group">
-                                        <label for="start">Heure de fermeture du lieu</label>
+                                        <label for="start">Heure de fermeture du lieu <span class="red">*</span></label>
                                         <input type="text" class="form-control" placeholder="Format : YYYY-MM-DD HH:MM:SS" id="end" name="end" value="{{ place.end }}" required>
                                     </div>
                                     <div class="form-group">
-                                        <label for="img">Photo du lieu</label>
+                                        <label for="img">Photo du lieu <span class="red">*</span></label>
                                         <input type="file" id="img" name="img" required>
                                         {% include 'imgInfo.html.twig' %}
                                     </div>
