--- a/src/Hph/View/back/programmation.html.twig
+++ b/src/Hph/View/back/programmation.html.twig
@@ -2,23 +2,7 @@
 {% block title %}Programmation{% endblock %}
 {% block content %}
     <div class="container">
-        {% if error==2 %}
-            <div class="alert alert-danger" role="alert">Le nom ou la description d'un artiste, ainsi que les liens vers les réseaux doit être une chaîne de caractères</div>
-        {% elseif error==3 %}
-            <div class="alert alert-danger" role="alert">La taille du nom de l'artiste ne peut pas dépasser les 150 caractères</div>
-        {% elseif error==0 %}
-            <div class="alert alert-danger" role="alert">Une erreur s'est produite lors de l'insertion dans la base de données</div>
-        {% elseif error==4 %}
-            <div class="alert alert-danger" role="alert">L'extension n'est pas valide</div>
-        {% elseif error==5 %}
-            <div class="alert alert-danger" role="alert">La taille de l'image est trop élevé</div>
-        {% elseif error==6 %}
-            <div class="alert alert-danger" role="alert">Le poids de l'image est trop élevé</div>
-        {% elseif error==8 %}
-            <div class="alert alert-danger" role="alert">Le format d'un des liens est invalide</div>
-        {% elseif error==10 %}
-            <div class="alert alert-danger" role="alert">Les champs requis doivent êtres remplis</div>
-        {% endif %}
+        {% include 'error.html.twig' %}
         <div class="text-center">
             <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#form" aria-expanded="false">Ajouter un artiste</button>
         </div>
@@ -27,23 +11,24 @@
             <div class="well">
                 <h2 class="text-center">Ajouter un Artiste</h2>
                 <hr />
+                {% include 'formInfo.html.twig' %}
                 <form method="POST" action="../../../../admin/admin.php?page=addArtist" enctype="multipart/form-data">
                     <div class="form-group">
-                        <label for="title">Nom de l'artiste</label>
+                        <label for="title">Nom de l'artiste <span class="red">*</span></label>
                         <input type="text" class="form-control" id="name" name="name" placeholder="Entrez le nom de l'artiste" required>
                     </div>
                     <div class="form-group">
-                        <label for="text">Description de l'artiste</label>
+                        <label for="text">Description de l'artiste <span class="red">*</span></label>
                         <textarea class="form-control textarea" name="content" id="content" placeholder="Entrez la description de l'artiste" rows="10" required></textarea>
                     </div>
                     <div class="form-group">
-                        <label for="img">Photo de l'artiste</label>
+                        <label for="img">Photo de l'artiste <span class="red">*</span></label>
                         <input type="file" id="img" name="img" required>
                         {% include 'imgInfo.html.twig' %}
                     </div>
                     <div class="form-group">
                         <label for="tags">Tags de l'artiste</label>
-                        <input type="text" class="form-control" id="tags" name="tags" placeholder="Entrez tag1, tag2, tag3">
+                        <input type="text" class="form-control" id="tags" name="tags" placeholder="Entrez les tags de l'artistes sous la forme tag1, tag2, tag3">
                     </div>
                     <div class="form-group">
                         <label for="url">Lien de la vidéo</label>
@@ -66,7 +51,7 @@
                         <input type="text" class="form-control" id="url" name="spotify_url" placeholder="Entrez le lien Spotify (le lien doit débuter par http://)">
                     </div>
                     <div class="form-group">
-                        <p><strong>Groupe Local</strong></p>
+                        <p><strong>Groupe Local <span class="red">*</span></strong></p>
                         <label for="local-1">Oui</label>
                         <input type="radio" name="local" value="1" id="local-1" checked><br>
                         <label for="local-0">Non</label>
@@ -123,22 +108,23 @@
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                                 <h4 class="modal-title">Modifier un Artiste</h4>
                             </div>
+                            {% include 'formInfo.html.twig' %}
                             <form method="POST" action="../../../../admin/admin.php?page=updateArtist" enctype="multipart/form-data">
                                 <div class="modal-body">
                                     <div class="form-group">
-                                        <label for="title">Nom de l'artiste</label>
+                                        <label for="title">Nom de l'artiste <span class="red">*</span></label>
                                         <input type="text" class="form-control" id="name" name="name" placeholder="Entrez le nom de l'artiste" value="{{ artist.name }}">
                                     </div>
                                     <div class="form-group">
-                                        <label for="content">Description de l'artiste</label>
+                                        <label for="content">Description de l'artiste <span class="red">*</span></label>
                                         <textarea class="form-control textarea" name="content" id="content" placeholder="Entrez la description de l'artiste" rows="10">{{ artist.bio }}</textarea>
                                     </div>
                                     <div class="form-group">
                                         <label for="tags">Tags de l'artiste</label>
-                                        <input type="text" class="form-control" id="tags" name="tags" placeholder="Entrez tag1, tag2, tag3" value="{{ artist.tags|join(', ') }}">
+                                        <input type="text" class="form-control" id="tags" name="tags" placeholder="Entrez les tags de l'artistes sous la forme tag1, tag2, tag3" value="{{ artist.tags|join(', ') }}">
                                     </div>
                                     <div class="form-group">
-                                        <label for="img">Photo de l'artiste</label>
+                                        <label for="img">Photo de l'artiste <span class="red">*</span></label>
                                         <input type="file" id="img" name="img">
                                         {% include 'imgInfo.html.twig' %}
                                     </div>
@@ -163,7 +149,7 @@
                                         <input type="text" class="form-control" id="url" name="spotify_url" placeholder="Entrez le lien Spotify (le lien doit débuter par http://)" value="{{ artist.spotifyUrl }}">
                                     </div>
                                     <div class="form-group">
-                                        <p><strong>Groupe Local</strong></p>
+                                        <p><strong>Groupe Local <span class="red">*</span></strong></p>
                                         <label for="local-1">Oui</label>
                                         <input type="radio" name="local" value="1" id="local-1" checked><br>
                                         <label for="local-0">Non</label>
