réajustement des sections en commentaire dans le css

--- a/src/Hph/View/front/artist.html.twig
+++ b/src/Hph/View/front/artist.html.twig
@@ -27,7 +27,7 @@
             </div>
             <div class="col-xs-4">
                 <div class="content-div upper text-center">
-                    <img src="../../../web/img/artist/{{ artist.imgArtist }}" class="img-responsive">
+                    <img src="../../../web/img/artist/{{ artist.imgArtist }}" class="img-responsive center-img">
                     <hr class="hr">
                     {% for prog in progs %}
                         {% if prog.showcase == 0  %}
