mise en page du bénévolat

--- a/src/Hph/View/front/volunteer.html.twig
+++ b/src/Hph/View/front/volunteer.html.twig
@@ -5,39 +5,51 @@
     <div class="container">
         <div class="row">
             <div class="benevolat-div ">
-                <h1 class="text-center">VOUS SOUHAITEZ AIDER À LA MISE EN PLACE DU FESTIVAL?</h1>
-                <p><strong>Pour quelques heures ou pour une vie, habile, jovial, dynamique, en vieux briscard de la bricole ou de la débrouille, prenez part à ce projet et apportez votre pierre à l&rsquo;édifice !</strong></p>
-                <p>Accessible à tous : Devenez acteur du festival en participant à des missions simples et concrètes (il faut obligatoirement être majeur pour être bénévole sur le festival).</p>
-                <p>Convivial : Seul(e) ou entre amis(es), c&rsquo;est un bon moyen de joindre l&rsquo;utile à l&rsquo;agréable.</p>
+                <h1 class="text-center font-circula font">Vous souhaitez aider à la mise en place du festival ?</h1>
+                <div class="intro font-bebas">
+                    <p>Pour quelques heures ou pour une vie, habile, jovial, dynamique, en vieux briscard de la bricole ou de la débrouille, prenez part à ce projet et apportez votre pierre à l&rsquo;édifice !</p>
+                    <p>Accessible à tous : Devenez acteur du festival en participant à des missions simples et concrètes (il faut obligatoirement être majeur pour être bénévole sur le festival).</p>
+                    <p>Convivial : Seul(e) ou entre amis(es), c&rsquo;est un bon moyen de joindre l&rsquo;utile à l&rsquo;agréable.</p>
+                </div>
+
                 <hr class="hr">
-                <h2><strong>Les grandes activités auxquelles vous pouvez participer :</strong></h2>
-                <br>
-                <p>
-                    <em><strong>Atelier création d&rsquo;éléments de décoration et de signalétique</strong></em> :
-                    <br />
-                    tous les ateliers auront lieu en début de soirée le mercredi 31 août, le jeudi 1er , le lundi 5 , le mercredi 7 et le jeudi 8 septembre.
+
+                <h2 class="font-circula titre2">Les grandes activités auxquelles vous pouvez participer :</h2>
+                <div class="activites">
+                    <span class="titre">Atelier création d&rsquo;éléments de décoration et de signalétique :</span>
+                    <p>Tous les ateliers auront lieu en début de soirée le mercredi 31 août, le jeudi 1er , le lundi 5 , le mercredi 7 et le jeudi 8 septembre.
                 </p>
-                <p><strong><em>Le montage</em></strong></p>
-                <p>Pendant 5 jours, tout le monde s&rsquo;active pour faire prendre vie au festival du lundi 12 au vendredi 16 septembre 15h: montage des scènes, installation de la décoration, montage des bars</p>
-                <p><strong><em>Pendant le festival</em></strong></p>
-                <p>vendredi 15, 16h30 au samedi 16 septembre 2h</p>
-                <ul>
-                    <li>Bar : vous servez les clients, vous vous occupez des stocks et du réapprovisionnement.</li>
-                    <li>Cashless : vous vendez et créditez les cartes de paiement pour les bars.</li>
-                    <li>Contrôle billet : vous contrôlez la validité des billets à l&rsquo;entrée du site</li>
-                    <li>Traducteur média : vous traduisez les interviews.</li>
-                    <li>Espace restauration : mise en place du buffet, réapprovisionnement des plats, vaisselle, </li>
-                    <li>Accueil artiste : vous prenez en charge l&rsquo;artiste de son arrivée et à son départ.</li>
-                    <li>Green Team : vous sensibilisez le public au tri sélectif, vous gérez les déchets.</li>
-                    <li>Photographe : vous photographiez les artistes, les concerts, les ambiances du festival</li>
-                    <li>Accueil info/ merchandising : vous informez le public, vous accueillez les personnes en situation de handicap, vous vous occupez de la boutique du festival.</li>
-                </ul>
-                <p><strong><em>Démontage</em></strong></p>
-                <p>Dimanche 17 dès 14h au lundi 18 septembre</p>
-                <br>
-                <p>Faites votre demande : remplissez le formulaire ci-dessous, toute demande incomplète ne pourra être traitée.</p>
-                <p>Merci de ne vous inscrire qu&rsquo;une seule fois</p>
-                <p><em>En cas de forte affluence, nous ne garantissons pas de pouvoir répondre favorablement à toutes les demandes de bénévolat.</em></p>
+                </div>
+                <div class="activites">
+                    <span class="titre">Le montage :</span>
+                    <p>Pendant 5 jours, tout le monde s&rsquo;active pour faire prendre vie au festival du lundi 12 au vendredi 16 septembre 15h: montage des scènes, installation de la décoration, montage des bars</p>
+                </div>
+                <div class="activites">
+                    <span class="titre">Pendant le festival</span>
+                    <p>vendredi 15, 16h30 au samedi 16 septembre 2h</p>
+                    <ul>
+                        <li>Bar : vous servez les clients, vous vous occupez des stocks et du réapprovisionnement.</li>
+                        <li>Cashless : vous vendez et créditez les cartes de paiement pour les bars.</li>
+                        <li>Contrôle billet : vous contrôlez la validité des billets à l&rsquo;entrée du site</li>
+                        <li>Traducteur média : vous traduisez les interviews.</li>
+                        <li>Espace restauration : mise en place du buffet, réapprovisionnement des plats, vaisselle, </li>
+                        <li>Accueil artiste : vous prenez en charge l&rsquo;artiste de son arrivée et à son départ.</li>
+                        <li>Green Team : vous sensibilisez le public au tri sélectif, vous gérez les déchets.</li>
+                        <li>Photographe : vous photographiez les artistes, les concerts, les ambiances du festival</li>
+                        <li>Accueil info/ merchandising : vous informez le public, vous accueillez les personnes en situation de handicap, vous vous occupez de la boutique du festival.</li>
+                    </ul>
+                </div>
+                <div class="activites">
+                    <span class="titre">Démontage :</span>
+                    <p>Dimanche 17 dès 14h au lundi 18 septembre</p>
+                </div>
+                <hr class="hr">
+
+                <div class="activites">
+                    <p>Faites votre demande : remplissez le formulaire ci-dessous, toute demande incomplète ne pourra être traitée.</p>
+                    <p>Merci de ne vous inscrire qu&rsquo;une seule fois.</p>
+                    <p>En cas de forte affluence, nous ne garantissons pas de pouvoir répondre favorablement à toutes les demandes de bénévolat.</p>
+                </div>
             </div>
             <div class="text-center">
                 <a href="../../../../index.php?page=contact"><button class="btn btn-primary contact-btn volunteer-btn">Devenez Bénévole</button></a>
