--- a/web/css/style.css
+++ b/web/css/style.css
@@ -820,10 +820,28 @@ a:hover {
 /*Benevolat*/
 
 .benevolat-div {
+    margin-top: 5%;
     color: white;
-    font-size: 18px;
+    font-size: 1.7em;
 }
-
+.intro {
+    margin-top: 7%;
+    margin-bottom: 7%;
+}
+.font {
+    font-size: 3em;
+}
+.titre{
+    font-weight: bold;
+    font-size: 1.2em;
+}
+.titre2 {
+    font-size: 2em;
+}
+.activites {
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
 /*Fin Benevolat*/
 
 /*News*/
