--- a/src/Hph/View/back/food.html.twig
+++ b/src/Hph/View/back/food.html.twig
@@ -88,23 +88,23 @@
                             <form method="POST" action="../../../../admin/admin.php?page=updateFood" enctype="multipart/form-data">
                                 <div class="modal-body">
                                     <div class="form-group">
-                                        <label for="title">Nom du Foodtruck</label>
+                                        <label for="title">Nom du Foodtruck<span class="red">*</span></label>
                                         <input type="text" class="form-control" id="name" name="name" placeholder="Entrez le nom du Foodtruck" value="{{ food.name }}" required>
                                     </div>
                                     <div class="form-group">
-                                        <label for="content">Description du Foodtruck</label>
+                                        <label for="content">Description du Foodtruck<span class="red">*</span></label>
                                         <textarea class="form-control textarea" name="content" id="content" placeholder="Entrez la description du Foodtruck" rows="10" required>{{ food.content }}</textarea>
                                     </div>
                                     <div class="form-group">
-                                        <label for="start">Heure d'ouverture du Foodtruck</label>
+                                        <label for="start">Heure d'ouverture du Foodtruck<span class="red">*</span></label>
                                         <input type="text" class="form-control" placeholder="Format : YYYY-MM-DD HH:MM:SS" id="start" name="start" value="{{ food.start }}" required>
                                     </div>
                                     <div class="form-group">
-                                        <label for="start">Heure de fermeture du Foodtruck</label>
+                                        <label for="start">Heure de fermeture du Foodtruck<span class="red">*</span></label>
                                         <input type="text" class="form-control" placeholder="Format : YYYY-MM-DD HH:MM:SS" id="end" name="end" value="{{ food.end }}" required>
                                     </div>
                                     <div class="form-group">
-                                        <label for="place">Lieu du Foodtruck</label>
+                                        <label for="place">Lieu du Foodtruck<span class="red">*</span></label>
                                         <select class="form-control" id="place" name="place" required>
                                             {%  for place in places %}
                                                 <option value="{{ place.id }}">{{ place.name }}</option>
