--- a/src/Hph/View/back/formInfo.html.twig
+++ b/src/Hph/View/back/formInfo.html.twig
@@ -1,1 +1,1 @@
-<p class="info">Les champs marqués d'une <span class="red">*</span> doivent être renseignés</p>
+<p class="info" style="margin: 5%;">Les champs marqués d'une <span class="red">*</span> doivent être renseignés</p>
