--- a/src/Hph/View/back/programmation.html.twig
+++ b/src/Hph/View/back/programmation.html.twig
@@ -130,23 +130,23 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="url">Lien de la vidéo</label>
-                                        <input type="text" class="form-control" id="url" name="video_url" placeholder="Entrez le lien de la vidéo (le lien doit débuter par http://)" value="{{ artist.videoUrl }}">
+                                        <input type="text" class="form-control" id="url" name="video_url" placeholder="Entrez le lien de la vidéo (le lien doit débuter par http://)" value="{{ artist.video_url }}">
                                     </div>
                                     <div class="form-group">
                                         <label for="url">Lien Facebook</label>
-                                        <input type="text" class="form-control" id="url" name="facebook_url" placeholder="Entrez le lien Facebook (le lien doit débuter par http://)" value="{{ artist.facebookUrl }}">
+                                        <input type="text" class="form-control" id="url" name="facebook_url" placeholder="Entrez le lien Facebook (le lien doit débuter par http://)" value="{{ artist.facebook_url }}">
                                     </div>
                                     <div class="form-group">
                                         <label for="url">Lien Youtube</label>
-                                        <input type="text" class="form-control" id="url" name="youtube_url" placeholder="Entrez le lien Youtube (le lien doit débuter par http://)" value="{{ artist.youtubeUrl}}">
+                                        <input type="text" class="form-control" id="url" name="youtube_url" placeholder="Entrez le lien Youtube (le lien doit débuter par http://)" value="{{ artist.youtube_url}}">
                                     </div>
                                     <div class="form-group">
                                         <label for="url">Lien Twitter</label>
-                                        <input type="text" class="form-control" id="url" name="twitter_url" placeholder="Entrez le lien Twitter (le lien doit débuter par http://)" value="{{ artist.twitterUrl }}">
+                                        <input type="text" class="form-control" id="url" name="twitter_url" placeholder="Entrez le lien Twitter (le lien doit débuter par http://)" value="{{ artist.twitter_url }}">
                                     </div>
                                     <div class="form-group">
                                         <label for="url">Lien Spotify</label>
-                                        <input type="text" class="form-control" id="url" name="spotify_url" placeholder="Entrez le lien Spotify (le lien doit débuter par http://)" value="{{ artist.spotifyUrl }}">
+                                        <input type="text" class="form-control" id="url" name="spotify_url" placeholder="Entrez le lien Spotify (le lien doit débuter par http://)" value="{{ artist.spotify_url }}">
                                     </div>
                                     <div class="form-group">
                                         <p><strong>Groupe Local <span class="red">*</span></strong></p>
